--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
+body {
+    background-image: url("https://img.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg?w=2000");
+}
+
+h1 {
+    width: 20em;
+    background-color: Tomato;
+    color: antiquewhite;
+    text-decoration: underline;
+}
+
+h2 {
+    color: Tomato;
+}
+
+p {
+    color: antiquewhite;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+div {
+    float:left;
+    background-color: antiquewhite;
+    width: 20em;
+    border: 15px;
+    border-color: tomato;
+    padding: 50px;
+    margin: 20px;
+}
+
 
